# rdsl

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  examples.ipynb  mkdocs.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
docs/: index.md  modules.md
src/rdsl/: __init__.py  functional_groups.py  highlight.py  widgets.py
src/rdsl/data/: alerts.csv  smarts_with_hierarchy.csv
src/rdsl/select/: __init__.py  base.py  consts.py  core.py  ops.py  parser.py  predefined.py  utils.py
tests/: test_functional_groups.py  test_select.py
